# data-prep-sec-edgar

./: .gitignore  README.md  f10k-download-parse-format.py  f10k-get-urls.py  pyproject.toml  requirements.txt
SC-new4j-C1/: .env.template  .gitignore  2-kg-querying.ipynb  3-rag-with-kg.ipynb  4-connect-chunks.ipynb  5-expanded-context.ipynb  README.md  load-documents.ipynb  pyproject.toml  z1-cypher-vector-search.ipynb  z2-KG-NER.ipynb
SC-new4j-C1/data/: form13.csv
SC-new4j-C1/data/form10k/: 0000004457-23-000052.json  0000014693-23-000074.json  0000055529-23-000013.json  0000057131-23-000032.json  0000091419-23-000072.json  0000107140-23-000092.json  0000108385-23-000022.json  0000353184-23-000071.json  0000709283-23-000013.json  0000726958-23-000059.json  0000794619-23-000040.json  0000886158-23-000059.json  0000891024-23-000006.json  0000939057-23-000178.json  0000939930-23-000052.json  0000950170-23-026915.json  0000950170-23-027474.json  0000950170-23-027948.json  0000950170-23-029412.json  0000950170-23-030037.json  0000950170-23-030121.json  0000950170-23-030394.json  0001104659-23-074920.json  (+22 more)
cypher/: delete-all.cypher
exploration/: 1-load-form10k-chunks.ipynb  2-connect-chunks.ipynb  load-documents.ipynb  load-form10k-chunks.ipynb
source-data-pull/: f10k-f13-subset.py
source-data-pull/form10k/: cik-sample-mapping.csv  f10k-download-parse-format.py  f10k-get-urls.py  f10k-parse-and-show.py
source-data-pull/form13/: f13-download.py  f13-parse-and-format.py
test-document-chunk-and-loading/: .env.template
test-kg-embedding-and-ner/: KG-NER.ipynb
